[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pupperv3_rl"
version = "0.1.0"
description = "Reinforcement Learning for Pupper V3 Robot"
authors = [
    {name = "Original Authors"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mujoco==3.2.7",
    "mujoco-mjx==3.2.7",
    "brax==0.12.1",
    "flax==0.10.2",
    "orbax==0.1.9",
    "jax==0.5.0",
    "jaxlib==0.5.0",
    "matplotlib",
    "mediapy",
    "numpy",
    "ml_collections",
    "etils",
    "wandb",
    "plotly",
]

[project.scripts]
pupperv3_train = "pupperv3_rl.scripts.train:main"
pupperv3_visualize = "pupperv3_rl.scripts.visualize:main"
pupperv3_export = "pupperv3_rl.scripts.export_policy:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
